integration_tests/codegen_fail/fail/interface/no_fields.stderr
error: GraphQL interface must have at least one field
  --> $DIR/no_fields.rs:13:1
   |
13 | trait Character {}
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: https://spec.graphql.org/June2018/#sec-Interfaces

error[E0412]: cannot find type `CharacterValue` in this scope
 --> $DIR/no_fields.rs:4:18
  |
4 | #[graphql(impl = CharacterValue)]
  |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `Character` in this scope
  --> $DIR/no_fields.rs:10:6
   |
10 | impl Character for ObjA {}
   |      ^^^^^^^^^ not found in this scope
